Regoranized API, added emulators
