# api/openapi.yaml
@@ -69,34 +69,6 @@ paths:
         "404":
           description: Festival not found
       x-swagger-router-controller: Festivals
-  /festivals/{id}/shows:
-    get:
-      tags:
-      - Festivals
-      summary: List all shows for a specific festival
-      operationId: list_shows_by_festival
-      parameters:
-      - name: id
-        in: path
-        description: The ID of the festival to list shows for
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-      responses:
-        "200":
-          description: An array of shows for the specified festival
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ShowRead'
-                x-content-type: application/json
-        "404":
-          description: Festival not found
-      x-swagger-router-controller: Festivals
   /festivals/{id}/optimize:
     post:
       tags:
@@ -138,9 +110,16 @@ paths:
   /shows:
     get:
       tags:
-      - Shows
+        - Shows
       summary: List all shows
       operationId: list_shows
+      parameters:
+        - name: festival_id
+          in: query
+          description: Optional ID of the festival to find shows by
+          required: false
+          schema:
+            type: string
       responses:
         "200":
           description: An array of shows
