# controllers/Shows.js
@@ -23,12 +23,17 @@ module.exports.delete_show = function delete_show (req, res, next, id) {
     });
 };
 
-module.exports.list_shows = function list_shows (req, res, next) {
-  Shows.list_shows()
-    .then(function (response) {
+module.exports.list_shows = function list_shows(req, res, next) {
+  // Extract 'festival_id' from the query parameters
+  const festival_id = req.query.festival_id;
+
+  // Now pass this 'festival_id' to your ShowsService, ensuring it's designed to accept this parameter
+  Shows.list_shows(festival_id)
+    .then(function(response) {
       utils.writeJson(res, response);
     })
-    .catch(function (response) {
-      utils.writeJson(res, response);
+    .catch(function(response) {
+      utils.writeJson(res, response, response.status || 500);
     });
 };
+
